	in adds items CCA$wa.excluded or CA$u.excluded for NA rows into
	ordination result, and function ordiNApredict called in scores.cca
	and scores.rda pads the results with these excluded data. In this
	way the internal structure of the cca object remains unchanged,
	but functions accessing the result with scores will get the NA
	data. 

	* weights.cca and weights.rda know na.action.
	
	* plot.cca: works when there are NA values in scores.

	* anova.cca(.., by = "axis") works when there are omitted or
	excluded observations due to missing values. However, the way the
	missing values are handled in simulations should be checked in all
	anova.cca models: are the missing rows permuted or not?
	
Version 1.16-26 (closed September 1, 2009)

	* cca and rda: can now handle missing values in constraints or
	conditions. With 'na.action = na.omit', the rows with missing
	values are removed, and with 'na.action = na.exclude' all rows are
	retained but results that cannot be computed are NA. The LC scores
	cannot be computed with missing values, but WA scores (usually)
	can be computed. The results with 'na.exclude' probably fail with
	most support functions because these do not expect missing values
	in the results. These functions are fixed with time. capscale does
	not (yet) handle missing data.

	* oecosimu: does not depend on permatfull/permatswap, but method
	can be a function. The r2dtable method implemented also
	to be used with adipart and related functions.

	* bioenv: uses standard R function combn() and removes
	ripley.subs() and ripley.subsets() from vegan. The result should
	be unchanged.

	* ordiNAexclude: internal infrastructure to implement na.action =
	na.exclude for cca and rda (and capscale?). The option returns
	scores where the excluded sites get NA results and are not
	omitted. In constrained ordination, LC scores will NA, but WA
	scores are found from the community data, and the current function
	uses predict.cca/predict.rda with 'newdata' of removed